# ai-arch-api

./: .gitignore  Dockerfile.api  Dockerfile.worker  docker-compose.yml  pyproject.toml  readme.md  test_async.py  Ход выполнения Лабораторной работы №5.md
.dvc/: config
.github/workflows/: ci.yml
data/: docs.dvc
mlflow_artifacts/275095314813938540/c9dd6ff1f0aa4f33ba3fdd85ccafdb92/artifacts/model/: MLmodel  conda.yaml  requirements.txt
models/: classifier.onnx.dvc
scripts/: init_minio.py  quality_gate.py  train_model.py
src/application/: services.py
src/domain/: entities.py  interfaces.py
src/infrastructure/: models.py  onnx_model.py  storage.py
src/presentation/: api.py  celery_app.py  cli.py  dependencies.py  tasks.py
src/presentation/data/docs/invoices/: test_invoice.txt
tests/: test_services.py
