[tool.poetry]
# Метаданные проекта
name = "clean-arch-ai"
version = "0.1.0"
description = "AI System Skeleton based on Clean Architecture"
authors = ["Student <student@example.com>"]
readme = "README.md"
# Указываем, где находится исходный код (пакет src)
packages = [{include = "src"}]

[tool.poetry.dependencies]
# Основные зависимости (нужны для работы приложения в продакшене)
python = "^3.11"
pydantic = "^2.0"       # Валидация данных (Entities)
fastapi = "^0.109.0"    # Веб-фреймворк для API (Presentation слой)
uvicorn = "^0.27.0"     # ASGI-сервер для запуска FastAPI
boto3 = "^1.34.0"       # SDK для работы с S3 (MinIO)
dvc = "^3.0.0"          # Система контроля версий данных
dvc-s3 = "^3.0.0"       # Плагин DVC для поддержки S3-протокола
scikit-learn = "^1.8.0"
skl2onnx = "^1.20.0"
onnxruntime = "^1.24.2"
celery = "^5.6.2"
redis = "^7.2.0"
mlflow = "^2.11.0"

[tool.poetry.group.dev.dependencies]
# Зависимости для разработки (тесты, линтеры и т.д.)
pytest = "^7.0"         # Фреймворк для тестирования
httpx = "^0.26.0"       # HTTP-клиент для тестирования API (TestClient)
ruff = "^0.3.0"

[build-system]
# Системные настройки сборки Poetry
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"